# kernel-reader

./: .gitignore  LICENSE  README.md  build-client.bat  kernel-reader.sln
.github/workflows/: build.yml  rust.yml
client/: client.cpp
driver/: driver.c  driver.inf  driver.vcxproj
rust/: Cargo.toml  README.md
rust/controller/: Cargo.toml
rust/controller/src/: driver.rs  main.rs  pattern.rs  session.rs  trainer.rs
rust/driver/: Cargo.toml  build.rs
rust/driver/src/: lib.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
shared/: ioctl_shared.h
