[package]
name    = "controller"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
shared    = { path = "../shared", features = ["std"] }
thiserror = "1"
anyhow    = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
